<?xml version="1.0"?>
<package format="3">
  <name>elevation_mapping_demos</name>
  <version>0.7.4</version>
  <description>Demonstrations for the elevation mapping framework.</description>

  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>
  <license>BSD</license>

  <url type="website">http://github.com/anybotics/elevation_mapping</url>
  <url type="bugtracker">http://github.com/anybotics/elevation_mapping/issues</url>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>elevation_mapping</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>

  <!-- Runtime dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>grid_map_visualization</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>point_cloud_io</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Testing -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing</test_depend>
</package>
